--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.skywa_framework_widgets_example">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
    <application
-        android:label="skywa_framework_widgets_example"
+        android:label="Skywa Framework Widgets"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
