--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_device_type: ^0.4.0
+  get_it: ^7.2.0
 
   flutter_web_plugins:
     sdk: flutter
