--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   eva_icons_flutter: ^3.0.2
   fluttertoast: ^8.0.9
   flutter_slidable: ^0.6.0
+  auto_size_text: ^3.0.0
+  url_launcher: ^6.1.5
+  lottie: ^1.3.0
 
   flutter_web_plugins:
     sdk: flutter
@@ -62,6 +65,7 @@ flutter:
   # To add assets to your plugin package, add an assets section, like this:
 #  assets:
 #    - assets/images/
+#    - assets/jsons/
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
