--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_device_type: ^0.4.0
-  fluttericon: ^2.0.0
-  material_design_icons_flutter: ^5.0.6595
-  eva_icons_flutter: ^3.0.2
   fluttertoast: ^8.0.9
   flutter_slidable: ^0.6.0
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.5
   lottie: ^1.3.0
+#  chips_choice: ^2.0.1
+  image_cropper: ^2.0.3
 
   flutter_web_plugins:
     sdk: flutter
