--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,13 @@ dependencies:
   lottie: ^1.3.0
 #  chips_choice: ^2.0.1
   image_cropper: ^2.0.3
+  flutter_lints: ^2.0.0
+  cached_network_image: ^3.2.1
 
   flutter_web_plugins:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
@@ -32,8 +35,6 @@ flutter_icons:
   android: true
   ios: true
   image_path: 'icons/app_icon.png'
-
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
