--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   image_picker: ^0.8.5+3
+  dropdown_search: ^5.0.3
 
 dev_dependencies:
   flutter_test:
