--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,26 +12,26 @@ dependencies:
     sdk: flutter
   flutter_device_type: ^0.4.0
   fluttertoast: ^8.0.9
-  flutter_slidable: ^0.6.0
+  flutter_slidable: ^2.0.0
   auto_size_text: ^3.0.0
-  url_launcher: ^6.1.5
-  lottie: ^1.3.0
+  url_launcher: ^6.1.6
+  lottie: ^1.4.3
 #  chips_choice: ^2.0.1
   image_cropper: ^3.0.0
-  flutter_lints: ^2.0.0
-  cached_network_image: ^3.2.1
+  flutter_lints: ^2.0.1
+  cached_network_image: ^3.2.2
   intl: ^0.17.0
 
   flutter_web_plugins:
     sdk: flutter
-  plugin_platform_interface: ^2.0.2
-  image_picker: ^0.8.5+3
+  plugin_platform_interface: ^2.1.3
+  image_picker: ^0.8.6
   dropdown_search: ^5.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.10.0
 
 flutter_icons:
   android: true
