--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   flutter_device_type: ^0.4.0
   fluttertoast: ^8.0.9
-  flutter_slidable: ^2.0.0
+#  flutter_slidable: ^2.0.0
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.6
   lottie: ^1.4.3
