--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.1.3
   image_picker: ^0.8.6
+  image_picker_web: ^3.0.0+1
   intl_phone_number_input: ^0.7.1
 
 dev_dependencies:
