--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_device_type: ^0.4.0
   fluttertoast: ^8.0.9
-#  flutter_slidable: ^2.0.0
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.6
   lottie: ^1.4.3
-#  chips_choice: ^2.0.1
   image_cropper: ^3.0.0
   flutter_lints: ^2.0.1
   cached_network_image: ^3.2.2
@@ -26,7 +23,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.1.3
   image_picker: ^0.8.6
-  image_picker_web: ^3.0.0+1
+#  image_picker_web: ^3.0.0+1
   intl_phone_number_input: ^0.7.1
 
 dev_dependencies:
